--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 <script>
   // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyDWruNu2MpLPCU6tzxcRm79hKqT5IVBzB8",
-    authDomain: "multiplayer-racing-e2773.firebaseapp.com",
-    databaseURL: "https://multiplayer-racing-e2773-default-rtdb.firebaseio.com",
-    projectId: "multiplayer-racing-e2773",
-    storageBucket: "multiplayer-racing-e2773.appspot.com",
-    messagingSenderId: "695142558940",
-    appId: "1:695142558940:web:68ef57282cb65bed8c1819"
+  const firebaseConfig = {
+    apiKey: "AIzaSyDNrdfkV9cn2dyZM6L9BDc909NseDNl8nM",
+    authDomain: "multi-player-game-e171c.firebaseapp.com",
+    databaseURL: "https://multi-player-game-e171c-default-rtdb.firebaseio.com",
+    projectId: "multi-player-game-e171c",
+    storageBucket: "multi-player-game-e171c.appspot.com",
+    messagingSenderId: "182751402263",
+    appId: "1:182751402263:web:8fafc79d7f7959d33eff52"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
